FInalizacion de mi primera app

--- a/app/src/main/res/layout/activity_imc_calculator.xml
+++ b/app/src/main/res/layout/activity_imc_calculator.xml
@@ -279,7 +279,8 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/viewPeso"
-        app:layout_constraintVertical_bias="0.8">
+        app:layout_constraintVertical_bias="0.8"
+        tools:ignore="TextSizeCheck">
 
     </Button>
 </androidx.constraintlayout.widget.ConstraintLayout>
