--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,6 +8,8 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
 
+    <!-- imc app -->
+
     <color name="botton_inicial">#314797</color>
     <color name="background_component_selected">#08847c</color>
     <color name="background_component">#181a1b</color>
@@ -17,4 +19,16 @@
     <color name="Flaco">#FFEB3B</color>
     <color name="SobrePeso">#F69602</color>
     <color name="obesidad">#F60202</color>
+
+    <!-- Task list -->
+    <color name="todo_background_card">#FF081A4A</color>
+    <color name="todo_background_disabled">#787878</color>
+    <color name="todo_background_todo_app">#FF2D4993</color>
+    <color name="todo_subtitle_text">#959595</color>
+    <color name="todo_accent">#E91E63</color>
+
+    <color name="todo_business_category">#FF9800</color>
+    <color name="todo_personal_category">#00BCD4</color>
+    <color name="todo_other_category">#4CAF50</color>
+    <color name="background_dialog_task">#0D3C0F</color>
 </resources>
