--- a/app/src/main/res/layout/activity_menu.xml
+++ b/app/src/main/res/layout/activity_menu.xml
@@ -21,4 +21,11 @@
         android:layout_height="wrap_content"
         android:text="IMC App"/>
 
+    <Button
+        android:id="@+id/btntasklist"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="TaskList" />
+
+
 </LinearLayout>
